@@ -1,3 +1,8 @@
+2011-05-06  Dodji Seketeli  <dodji@redhat.com>
+
+    	PR c++/48838
+	* g++.dg/template/member9.C: New test case.
+
 2011-05-05  Jason Merrill  <jason@redhat.com>
 
 	* g++.dg/init/new30.C: New.
